Added classmate's better code

--- a/weekFour/assignmentThree.ipynb
+++ b/weekFour/assignmentThree.ipynb
@@ -83,28 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4]\n",
-      "(0, 1, 2, 3, 4, 2, 3)\n",
-      "[[[0 0 0]\n",
-      "  [1 1 1]\n",
-      "  [2 2 2]]]\n",
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a tuple with a list of items and convert it to a list\n",
     "def create_tuple(length):\n",
@@ -138,7 +119,7 @@
     "\n",
     "    print(create_3d_array(3))\n",
     "\n",
-    "    print_odd_numbers(15)\n"
+    "    print_odd_numbers(15)"
    ]
   }
  ],
