WeekFive assignment two done

--- a/weekFive/day_two.ipynb
+++ b/weekFive/day_two.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,8 @@
       "First: Football\n",
       "Second: Basketball\n",
       "Third: Soccer\n",
-      "Fourth: Baseball\n"
+      "Fourth: Baseball\n",
+      "['Football', 'Basketball', 'Soccer', 'Baseball']\n"
      ]
     }
    ],
@@ -121,7 +122,9 @@
     "        print('Fourth: ' + self.sports4)\n",
     "\n",
     "order1 = myFavoriteSports('Football', 'Basketball', 'Soccer','Baseball')\n",
-    "order1.sports_order()"
+    "order1.sports_order()\n",
+    "\n",
+    "print([order1.sports1, order1.sports2, order1.sports3, order1.sports4])"
    ]
   }
  ],
