--- a/weekFive/assignmentThree.ipynb
+++ b/weekFive/assignmentThree.ipynb
@@ -117,6 +117,75 @@
     "l1= [[4, 5, 3, 9], [7, 1, 8, 2], [5, 6, 4, 7]]\n",
     "print(numpy.transpose(l1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "class find_vector:\n",
+    "    def __init__(self, number1,number2):\n",
+    "        self.number1 = number1\n",
+    "        self.number2 = number2\n",
+    "\n",
+    "    def __add__(self, addition):\n",
+    "        return find_vector(self.number1 + addition.number1, self.number2 + addition.number2)\n",
+    "\n",
+    "first_position = find_vector(20,100)\n",
+    "second_position = find_vector(30,50)\n",
+    "\n",
+    "combine = first_position + second_position\n",
+    "\n",
+    "print(combine.number1)\n",
+    "print(combine.number2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jefferey Sheba Jonathan\n",
+      "Jonathan\n",
+      "Jonathan's Hobbies are Basketball, Swimming and Math\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Class Quiz runthrough\n",
+    "\n",
+    "class family_tree:\n",
+    "    def __init__(self,dad,mom,son):\n",
+    "        self.dad = dad\n",
+    "        self.mom = mom\n",
+    "        self.son = son\n",
+    "\n",
+    "class son_hobbies(family_tree):\n",
+    "    def hobbies(self):\n",
+    "        print(self.son + '\\'s Hobbies are Basketball, Swimming and Math' )\n",
+    "\n",
+    "tree = family_tree('Jefferey', 'Sheba', 'Jonathan')\n",
+    "son_tree = son_hobbies('Jeffrey','Sheba', 'Jonathan')\n",
+    "\n",
+    "print(tree.dad , tree.mom , tree.son)\n",
+    "print(son_tree.son)\n",
+    "\n",
+    "son_tree.hobbies()"
+   ]
   }
  ],
  "metadata": {
