Corrected the nesting dictionary

--- a/Week6/assignment1.ipynb
+++ b/Week6/assignment1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -49,8 +49,17 @@
      "text": [
       "{'Patricia': {'Number': '0786145718', 'Address': 'Gayaza', 'Connection': 'Work'}, 'Maurice': {'Number': '0786145717', 'Address': 'Mukono', 'Connection': 'Hiking'}, 'Tonny': {'Number': '0786145718', 'Address': 'Mengo', 'Connection': 'Basketball'}}\n",
       "Patricia\n",
+      "Number: 0786145718\n",
+      "Address: Gayaza\n",
+      "Connection: Work\n",
       "Maurice\n",
-      "Tonny\n"
+      "Number: 0786145717\n",
+      "Address: Mukono\n",
+      "Connection: Hiking\n",
+      "Tonny\n",
+      "Number: 0786145718\n",
+      "Address: Mengo\n",
+      "Connection: Basketball\n"
      ]
     }
    ],
@@ -80,8 +89,10 @@
     "\n",
     "print(phoneBook)\n",
     "\n",
-    "for names in phoneBook.keys():\n",
-    "    print (names)"
+    "for i,m in phoneBook.items():\n",
+    "    print (i)\n",
+    "    for j,k in m.items():\n",
+    "        print(j+\": \"+ k)"
    ]
   },
   {
